{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 80,
  "lineage": "9c08691e-aaf5-69c4-5e4c-0afa23abf895",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "terraform_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/2777f8cf-4e6a-4dc7-a170-2ac2d0cd9491/resourceGroups/terraform_rg/providers/Microsoft.Network/networkInterfaces/example-nint",
            "internal_domain_name_suffix": "vdjzfoxdia2uth5afiyv2qx2mc.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/2777f8cf-4e6a-4dc7-a170-2ac2d0cd9491/resourceGroups/terraform_rg/providers/Microsoft.Network/publicIPAddresses/PublicIp1",
                "subnet_id": "/subscriptions/2777f8cf-4e6a-4dc7-a170-2ac2d0cd9491/resourceGroups/terraform_rg/providers/Microsoft.Network/virtualNetworks/example-network/subnets/internal"
              }
            ],
            "location": "uksouth",
            "name": "example-nint",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "terraform_rg"
          },
          "dependencies": [
            "azurerm_public_ip.terraform_example",
            "azurerm_resource_group.terraform_example",
            "azurerm_subnet.terraform_example",
            "azurerm_virtual_network.terraform_example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "terraform_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2777f8cf-4e6a-4dc7-a170-2ac2d0cd9491/resourceGroups/terraform_rg/providers/Microsoft.Network/networkSecurityGroups/terraform_nsg",
            "location": "uksouth",
            "name": "terraform_nsg",
            "resource_group_name": "terraform_rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.terraform_example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/2777f8cf-4e6a-4dc7-a170-2ac2d0cd9491/resourceGroups/terraform_rg/providers/Microsoft.Network/networkSecurityGroups/terraform_nsg/securityRules/allowSSH",
            "name": "allowSSH",
            "network_security_group_name": "terraform_nsg",
            "priority": 300,
            "protocol": "Tcp",
            "resource_group_name": "terraform_rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.terraform_example",
            "azurerm_resource_group.terraform_example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "terraform_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/2777f8cf-4e6a-4dc7-a170-2ac2d0cd9491/resourceGroups/terraform_rg/providers/Microsoft.Network/publicIPAddresses/PublicIp1",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "PublicIp1",
            "resource_group_name": "terraform_rg",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.terraform_example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "terraform_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2777f8cf-4e6a-4dc7-a170-2ac2d0cd9491/resourceGroups/terraform_rg/providers/Microsoft.Network/virtualNetworks/example-network/subnets/internal",
            "name": "internal",
            "resource_group_name": "terraform_rg",
            "virtual_network_name": "example-network"
          },
          "dependencies": [
            "azurerm_resource_group.terraform_example",
            "azurerm_virtual_network.terraform_example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "terraform_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2777f8cf-4e6a-4dc7-a170-2ac2d0cd9491/resourceGroups/terraform_rg/providers/Microsoft.Network/virtualNetworks/example-network/subnets/internal",
            "network_security_group_id": "/subscriptions/2777f8cf-4e6a-4dc7-a170-2ac2d0cd9491/resourceGroups/terraform_rg/providers/Microsoft.Network/networkSecurityGroups/terraform_nsg",
            "subnet_id": "/subscriptions/2777f8cf-4e6a-4dc7-a170-2ac2d0cd9491/resourceGroups/terraform_rg/providers/Microsoft.Network/virtualNetworks/example-network/subnets/internal"
          },
          "dependencies": [
            "azurerm_network_security_group.terraform_example",
            "azurerm_resource_group.terraform_example",
            "azurerm_subnet.terraform_example",
            "azurerm_virtual_network.terraform_example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "terraform_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "ba92d3a8-40e3-4939-9fe0-2a315e42fc62",
            "id": "/subscriptions/2777f8cf-4e6a-4dc7-a170-2ac2d0cd9491/resourceGroups/terraform_rg/providers/Microsoft.Network/virtualNetworks/example-network",
            "location": "uksouth",
            "name": "example-network",
            "resource_group_name": "terraform_rg",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.terraform_example"
          ]
        }
      ]
    }
  ]
}